# AutonomouDriving

./: README.md
docs/Entwicklerdokumentation/: Allgemein.adoc  Entwicklerdokumentation.adoc  Faq.adoc  Motivation.adoc  Nachrichten.adoc  Parameter.adoc  Quickstart.adoc  Setup.adoc  Statemachine.adoc  Testen.adoc  Workspace.adoc
psaf_configuration/: CMakeLists.txt  package.xml
psaf_configuration/include/psaf_configuration/: configuration.hpp
psaf_configuration/src/: configuration.cpp
psaf_controller/: CMakeLists.txt  package.xml
psaf_controller/config/: psaf_controller.yaml
psaf_controller/include/psaf_controller/: controller_node.hpp
psaf_controller/launch/: controller.launch.py
psaf_controller/src/: controller.cpp  controller_node.cpp
psaf_controller/test/: unit_tests.cpp
psaf_lane_detection/: CMakeLists.txt  package.xml
psaf_lane_detection/config/: psaf_lane_detection.yaml
psaf_lane_detection/include/psaf_lane_detection/: lane_detection_node.hpp
psaf_lane_detection/launch/: lanedetection.launch.py
psaf_lane_detection/src/: lane_detection.cpp  lane_detection_node.cpp
psaf_lane_detection/test/: integration_tests.cpp  simulation_tests.cpp  unit_tests.cpp
psaf_lane_detection/test/include/: test_util.hpp
psaf_launch/: CMakeLists.txt  package.xml
psaf_launch/config/: d435i.yaml  d455.yaml  parameters_new.yml  parameters_old.yml  psaf_launch.yaml
psaf_launch/launch/: main_psaf1.launch.py  main_psaf1_clt.launch.py  main_psaf1_urclt.launch.py  main_psaf2.launch.py  realsense2_camera_435.launch.py  realsense2_camera_455.launch.py  ucbridge_new.launch.py  ucbridge_old.launch.py
psaf_manual_mode/: CMakeLists.txt  package.xml
psaf_manual_mode/config/: psaf_manual_mode.yaml
psaf_manual_mode/include/psaf_manual_mode/: manual_mode_node.hpp
psaf_manual_mode/launch/: manualmode.launch.py
psaf_manual_mode/src/: manual_mode.cpp  manual_mode_node.cpp
psaf_manual_mode/test/: unit_tests.cpp
psaf_object_detection/: CMakeLists.txt  package.xml
psaf_object_detection/config/: psaf_object_detection.yaml
psaf_object_detection/include/psaf_object_detection/: object_detection_node.hpp
psaf_object_detection/launch/: objectdetection.launch.py
psaf_object_detection/src/: object_detection.cpp  object_detection_node.cpp
psaf_object_detection/test/: unit_tests.cpp
psaf_parking/: CMakeLists.txt  package.xml
psaf_parking/config/: psaf_parking.yaml
psaf_parking/include/psaf_parking/: parking_node.hpp
psaf_parking/launch/: parking.launch.py
psaf_parking/src/: parking.cpp  parking_node.cpp
psaf_parking/test/: unit_tests.cpp
psaf_sign_detection/: CMakeLists.txt  package.xml
psaf_sign_detection/config/: psaf_sign_detection.yaml
psaf_sign_detection/include/psaf_sign_detection/: sign_detection_node.hpp
psaf_sign_detection/launch/: signdetection.launch.py
psaf_sign_detection/src/: sign_detection.cpp  sign_detection_node.cpp
psaf_sign_detection/test/: unit_tests.cpp
psaf_startbox/: CMakeLists.txt  package.xml
psaf_startbox/config/: psaf_startbox.yaml
psaf_startbox/include/psaf_startbox/: startbox_node.hpp
psaf_startbox/launch/: startbox.launch.py
psaf_startbox/src/: startbox.cpp  startbox_node.cpp
psaf_startbox/test/: integration_tests.cpp
psaf_startbox/test/include/: test_util.hpp
psaf_startbox/test/resources/bags/qr_code/: metadata.yaml
psaf_state_machine/: CMakeLists.txt  package.xml
psaf_state_machine/config/: psaf_state_machine.yaml
psaf_state_machine/include/psaf_state_machine/: state_definitions.hpp
psaf_state_machine/include/psaf_state_machine/basic_cup/: basic_cup_state_machine.hpp  basic_cup_state_machine_events.hpp  basic_cup_state_machine_node.hpp
psaf_state_machine/include/psaf_state_machine/basic_cup/states/: definition_start_state.hpp  driving.hpp  error.hpp  manual_driving.hpp  overtake.hpp  parking.hpp  shutdown.hpp  start_box.hpp
psaf_state_machine/include/tinyfsm/: tinyfsm.hpp
psaf_state_machine/launch/: statemachine.launch.py
psaf_state_machine/src/basic_cup/: basic_cup_state_machine.cpp  basic_cup_state_machine_main.cpp  basic_cup_state_machine_node.cpp
psaf_state_machine/src/basic_cup/states/: driving.cpp  error.cpp  manual_driving.cpp  overtake.cpp  parking.cpp  shutdown.cpp  start_box.cpp
psaf_state_machine/test/: integration_test.cpp  test_state_machine.cpp  test_state_machine_discipline_one.cpp  test_state_machine_discipline_two.cpp
psaf_state_machine/test/include/: integration_test.hpp  random_tests.hpp  test_util.hpp
psaf_trajectory/: CMakeLists.txt  ignor.lintrc  package.xml
psaf_trajectory/config/: psaf_trajectory.yaml
psaf_trajectory/include/psaf_trajectory/: trajectory_node.hpp
psaf_trajectory/launch/: trajectory.launch.py
psaf_trajectory/src/: trajectory.cpp  trajectory_node.cpp
psaf_trajectory/test/: unit_tests.cpp
psaf_utils/: package.xml  setup.cfg  setup.py
psaf_utils/psaf_utils/: psaf_sim_controller.py
psaf_utils/src/: utils.cpp
psaf_utils/test/: test_copyright.py
psaf_watchdog/: CMakeLists.txt  package.xml
psaf_watchdog/config/: psaf_watchdog.yaml
psaf_watchdog/include/psaf_watchdog/: watchdog_node.hpp
psaf_watchdog/launch/: watchdog.launch.py
psaf_watchdog/src/: watchdog.cpp  watchdog_node.cpp
psaf_watchdog/test/: unit_tests.cpp
